--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,11 +24,13 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.24.0",
+    "react-slick": "^0.30.3",
     "react-smooth": "^4.0.4",
     "react-swipeable": "^7.0.2",
     "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
     "react-type-animation": "^3.2.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2",
     "xlsx": "^0.18.5"
   },
