--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "axios": "^1.7.2",
+    "d3-geo": "^3.1.1",
     "framer-motion": "^11.18.1",
     "gsap": "^3.12.7",
     "jspdf": "^2.5.1",
@@ -24,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.24.0",
+    "react-simple-maps": "^3.0.0",
     "react-slick": "^0.30.3",
     "react-smooth": "^4.0.4",
     "react-swipeable": "^7.0.2",
