--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -20,7 +20,7 @@ RUN npm run build
 FROM nginx:1.23-alpine
 
 # Copy the built files to the Nginx server's root directory
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
 
 # Expose port 80 for the server
 EXPOSE 80
