--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,6 +34,7 @@
     "react-type-animation": "^3.2.0",
     "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.15.10",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
