--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/storage": "^7.15.0",
     "aws-sdk": "^2.1665.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
