--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.12.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "@react-spring/web": "^9.7.5",
     "axios": "^1.7.2",
     "d3-geo": "^3.1.1",
     "framer-motion": "^11.18.1",
