--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.24.0",
     "react-simple-maps": "^3.0.0",
     "react-slick": "^0.30.3",
