--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@react-spring/web": "^9.7.5",
+    "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.7.2",
     "d3-geo": "^3.1.1",
     "framer-motion": "^11.18.1",
@@ -28,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-id-swiper": "^4.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.24.0",
     "react-simple-maps": "^3.0.0",
     "react-slick": "^0.30.3",
