--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,8 @@
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.7.2",
     "d3-geo": "^3.1.1",
+    "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.18.1",
     "gsap": "^3.12.7",
     "jquery": "^3.7.1",
@@ -25,6 +27,7 @@
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
+    "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
@@ -38,6 +41,7 @@
     "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
     "react-type-animation": "^3.2.0",
+    "recharts": "^2.15.1",
     "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.15.10",
